Wed Oct 24 15:33:23 CEST 2001  Robin Ericsson  <lobbin@localhost.nu>

	* src/map.c (button_cb): Changed /.amcl/ to /.gnome-mud/.

	* src/prefs.c (load_prefs): Added code for check if ~/.gnome-mud
	exists, and if not, then create it.

Mon Oct 22 12:34:20 CEST 2001  Robin Ericsson  <lobbin@localhost.nu>

	* src/color.c (window_color): Menu now works when you close the
	window via window manager destroy.

	* src/gnome-mud.h: Removed old unused function calls.

	* src/keybind.c (save_keys, load_keys): Removed, not used.

	* src/profiles.c (profilelist_new_input_cb): Send in parent
	window to gnome_request_dialog().

	* src/wizard.c (load_wizard, save_wizard): Removed, not used.

Mon Oct 22 02:25:23 CEST 2001  Jordi Mallach  <jordi@sindominio.net>

	* doc/C/gnome-mud.sgml: fixes (missing closing tags, etc).
	Thanks to jfleck, of #docs@irc.gnome.org.

	* doc/Makefile.am, doc/sgmldocs.make doc/C/Makefile.am,
	doc/C/gnome-mud-C.omf: added automake and scrollkeeper files, not
	activating it in configure.in still, not sure if things are working
	ok still.

Sun Oct 21 23:46:55 CEST 2001  Jordi Mallach  <jordi@sindominio.net>

	* doc/C/gnome-mud.sgml: first draft of the GNOME-Mud Manual.
	It describes all the current features in GNOME-Mud, all the menu's,
	dialogs and toolbars. And, I had to write it twice! (luckily, this
	second version is so much better than the original).

	* doc/C/main-window.png, doc/C/preferences-window,
	doc/C/profiles-window.png: screenshots for the manual.

Fri Oct 19 18:00:18 CEST 2001  Jordi Mallach  <jordi@sindominio.net>

	* src/prefs.c: fixed typos.

	* src/init.c: fixed labels of some menu entries.

Fri Oct 19 15:35:09 CEST 2001  Robin Ericsson  <lobbin@localhost.nu>

	* ROADMAP: Added some more entries.

Fri Oct 19 14:23:53 CEST 2001  Robin Ericsson  <lobbin@localhost.nu>

	* src/net.c [open_connection]: Fixed a small bug I added a few
	days ago :)

Fri Oct 19 13:02:18 CEST 2001  Jordi Mallach  <jordi@sindominio.net>
