@@ -1,3 +1,10 @@
+Thu Oct 25 13:05:43 CEST 2001  Robin Ericsson  <lobbin@localhost.nu>
+
+	* src/profiles.c (profilelist_new_cb): Close this window when 
+	parent window closes.
+	(profilelist_delete_cb): Close this window when parent window
+	closes.
+
 Wed Oct 24 15:33:23 CEST 2001  Robin Ericsson  <lobbin@localhost.nu>
 
 	* src/map.c (button_cb): Changed /.amcl/ to /.gnome-mud/.
